gl31-master/src/test/deca/codegen/valid/sansobjet/int_overflow2.deca
// Description:
//    Test le dépassement (reboucle)
//
// Resultats:
//    Succes : affiche '2147483647'
// 
// Historique:
//    cree le 16/01/2021
{
    int i = -2147483647;
    i = i - 2;
    print(i);
}
